--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@material-ui/core": "^4.11.3",
     "autoprefixer": "^10.2.4",
     "next": "10.0.7",
