--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.4",
     "next": "10.0.7",
     "postcss": "^8.2.6",
