--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.3.1",
     "next": "10.0.7",
+    "next-seo": "^4.26.0",
     "postcss": "^8.3.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
